--- a/.gitmodules
+++ b/.gitmodules
@@ -55,5 +55,6 @@
 	url = https://github.com/UAVCAN/libcanard.git
 [submodule "submodules/simulation-pipeline"]
 	path = submodules/simulation-pipeline
+	branch = main
 	url = https://github.com/MAV-Lab23/simulation-pipeline.git
 	ignore = dirty
